# rd_classification_API

./: .dockerignore  .gitignore  Dockerfile  README.md  best_model.h5  docker-compose.yml  pyproject.toml
rd_classification/: manage.py
rd_classification/classification/: classification.py
rd_classification/core/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
rd_classification/core/migrations/: 0001_initial.py
rd_classification/rd_classification/: asgi.py  settings.py  urls.py  wsgi.py
