[tool.poetry]
name = "rd-classification"
version = "0.1.0"
description = ""
authors = ["JoaoVictorMartins05 <joaovictor.if2018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.1"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.29.0"
django-cors-headers = "^4.3.1"
djangorestframework-simplejwt = "^5.3.1"
dj-database-url = "==2.1.0"
django-environ = "==0.11.2"
django = "^5.0.6"
pillow = "^10.3.0"
simpleitk = "^2.3.1"
mahotas = "^1.4.15"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
